--- a/Projects/xxdCmdb/web/templates/business_2_list.html
+++ b/Projects/xxdCmdb/web/templates/business_2_list.html
@@ -157,7 +157,7 @@
             });
         });
         function ChangePage(id) {
-                $.nbDataList('/business_2s.html', id);
+                $.nbDataLists(id);
             }
     </script>
 {% endblock %}
