--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -25,18 +25,18 @@
             <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>权限查询</span>
         </a>
-        <a id="menu_list" class="menu-item" href="/project_list_r.html">
-            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>发布列表</span>
-        </a>
-        <a id="menu_online" class="menu-item" href="/release_r.html">
-            <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>发布记录</span>
-        </a>
-        <a id="menu_search" class="menu-item" href="#">
-            <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>上线日志</span>
-        </a>
+{#        <a id="menu_list" class="menu-item" href="/project_list_r.html">#}
+{#            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>发布列表</span>#}
+{#        </a>#}
+{#        <a id="menu_online" class="menu-item" href="/release_r.html">#}
+{#            <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>发布记录</span>#}
+{#        </a>#}
+{#        <a id="menu_search" class="menu-item" href="#">#}
+{#            <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>上线日志</span>#}
+{#        </a>#}
 {#        <ul class="tree" style="margin-left: -25px"></ul>#}
     </div>
     <div class="content">
