--- a/Projects/xxdCmdb/web/templates/layout/_laytask.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laytask.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/static/css/backend.css"/>
     <link rel="stylesheet" href="/static/css/commons.css"/>
     <link rel="stylesheet" href="/static/css/bootstrap-select.css"/>
+{#    <link href="/static/css/bootstrap-switch.css" rel="stylesheet">#}
+
 
     {% block css %} {% endblock %}
 </head>
