--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/backend.css"/>
     <link rel="stylesheet" href="/static/css/commons.css"/>
     <link rel="stylesheet" href="/static/css/jquery.treemenu.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
 
     {% block css %} {% endblock %}
 </head>
