--- a/Projects/xxdCmdb/web/templates/add_asset.html
+++ b/Projects/xxdCmdb/web/templates/add_asset.html
@@ -1,6 +1,52 @@
 {% extends 'layout/_laybusiness.html' %}
 
 {% block css %}
+<style>
+    .guige {
+
+    }
+
+    .guige-table {
+        width: 100%;
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+    .guige-table .title {
+        background: #f5fafe;
+        text-align: left;
+        font-weight: bold;
+        line-height: 32px;
+        height: 32px;
+        font-family: "微软雅黑";
+        border-right: 1px solid #dcdcdc;
+        border-left: 2px solid #0488cd;
+    }
+
+    .guige-table td, .content .guige-table th {
+        border: 1px solid #dcdcdc;
+        line-height: 30px;
+        height: 30px;
+        padding: 0 10px;
+        border-top: 0;
+    }
+
+    .guige-table .body-left {
+        width: 126px;
+        font-weight: normal;
+        text-align: right;
+        color: #666;
+    }
+
+    .guige-table .body-right {
+        color: #333;
+    }
+
+    .bootstrap-select {
+        width: 100px;
+    }
+
+</style>
 
 
 {% endblock %}
@@ -13,9 +59,156 @@
     </ol>
     <div style="padding: 5px 8px;">
 
+        <div style="width: 500px; float: left">
+            <div class="guige">
+                <table class="guige-table">
+                   <tbody>
+                    <tr>
+                        <th colspan="5" class="title f14 th" style="border-left:2px solid #0488cd;"><span class="padding-l-8">基本信息</span></th>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <br>
+            <form role="form">
+                <label>主机名</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>管理IP</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>机房</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>机柜</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                                <label>上架日期</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+{#                <label>型号</label>#}
+{#                <div class="form-group">#}
+{#                  <input type="text" class="form-control" placeholder="">#}
+{#                </div>#}
+            </form>
+        </div>
+
+        <div style="width: 500px; float: right">
+            <div class="guige" >
+                <table class="guige-table">
+                   <tbody>
+                    <tr>
+                        <th colspan="5" class="title f14 th" style="border-left:2px solid #0488cd;"><span class="padding-l-8">硬件信息</span></th>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <br>
+            <form role="form">
+                <label>机器型号</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>序列号</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>CPU</label>
+            <div class="form-group" >
+            <div id="wd">
+                <select class="selectpicker">
+                      {% for item in response.data %}
+                      <option id="recipient-name23" value={{ item.id }}>{{ item.name }}</option>
+                      {% endfor %}
+                </select>
+            </div>
+            </div>
+                <br>
+                <label>内存</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                <label>RAID</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+                                <label>保修日期</label>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="">
+                </div>
+            </form>
+        <br>
+        </div>
+
+
+        <div class="guige">
+            <table class="guige-table">
+                <tbody id="disk_all">
+                    <tr>
+                        <th colspan="6" class="title f14 th" style="border-left:2px solid #0488cd;">
+                            <span class="padding-l-8">硬盘信息 </span>
+                            <i class="fa fa-plus-square-o" aria-hidden="true" onclick="add_disk(this);"></i>
+                        </th>
+
+                    </tr>
+                     <tr>
+                       <th>选择</th>
+                       <th>插槽</th>
+                       <th>容量</th>
+                       <th>接口类型</th>
+                       <th>型号</th>
+                     </tr>
+                    <tr id="eth">
+                       <td></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 80px" value="1"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 120px" value="500G"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 80px" value="SAS"></td>
+                       <td><input type="text" style="border: none; margin-right: -77px; width: 200px" value="SEAGATE ST300MM0006 LS08S0K2B5NV"></td>
+                     </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <br>
+
+        <div class="guige">
+            <table class="guige-table">
+                <tbody id="eth_all">
+                    <tr>
+                        <th colspan="6" class="title f14 th" style="border-left:2px solid #0488cd;">
+                            <span class="padding-l-8">网卡信息 </span>
+                            <i class="fa fa-plus-square-o" aria-hidden="true" onclick="add_eth(this);"></i>
+                        </th>
+
+                    </tr>
+                     <tr>
+                       <th>选择</th>
+                       <th>网卡</th>
+                       <th>Mac地址</th>
+                       <th>IP地址</th>
+                       <th>上联交换机</th>
+                       <th>交换机端口</th>
+                     </tr>
+                    <tr id="eth">
+                       <td></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 80px" value="eth0"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 120px" value="00:1c:42:a5:57:7a"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 80px" value="192.168.1.1"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 100px" value="192.168.1.254"></td>
+                       <td><input type="text" style="border: none; margin-right: -84px; width: 80px" value="8"></td>
+                     </tr>
+                </tbody>
+            </table>
+        </div>
+    <br>
+    <button class="btn btn-primary" type="button" style="float: right; margin-right: 20px; width: 150px">提交保存</button>
 
     </div>
-
 
 
 {% endblock %}
@@ -24,12 +217,37 @@
     <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
     <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="/static/js/nb-list.js"></script>
+    <script src="/static/js/bootstrap-select.js"></script>
+
+
 
     <script>
         $(function () {
             $.initMenu('#menu_asset');
+            window.setTimeout(add_width, 100);
         });
 
+        function add_eth(ths) {
+{#            var p = $('#eth').clone();#}
+            var p = $(ths).parent().parent().next().next().clone();
+            $('#eth_all').append(p);
+            $('#eth_all tr:last td:eq(0)').append("<i class='fa fa-minus-square-o' aria-hidden='true' onclick='remove(this);'></i>");
+        }
 
+        function add_disk(ths) {
+{#            var p = $('#eth').clone();#}
+            var p = $(ths).parent().parent().next().next().clone();
+            $('#disk_all').append(p);
+            $('#disk_all tr:last td:eq(0)').append("<i class='fa fa-minus-square-o' aria-hidden='true' onclick='remove(this);'></i>");
+        }
+
+        function remove(ths) {
+            $(ths).parent().parent().remove();
+        }
+
+        function add_width() {
+            $('#wd').children().prop('style', 'width: 500px');
+        }
     </script>
+
 {% endblock %}
